--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "react": "^16.7.0",
+    "react-banner": "^0.5.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
