further updates to crypto js

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "secretapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^3.9.1",
     "bootstrap": "^4.2.1",
